// SPDX-License-Identifier: GPL-3.0-or-later
// Copyright (C) 2026 the Schmaloogium contributors

// Root is an aggregator only: no code, no source sets, no Unimined (PHASE_1_DOC §4.2.2).
plugins {
    id 'com.gradleup.shadow'                  version '9.5.1'        apply false
    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.4.1'
    id 'xyz.wagyourtail.unimined'             version '1.4.36-kappa' apply false
    id 'net.kyori.blossom'                    version '2.2.0'        apply false
}

import org.jetbrains.gradle.ext.Gradle

allprojects {
    group = root_package
    version = mod_version
}

subprojects {
    apply plugin: 'java-library'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
        if (generate_sources_jar.toBoolean()) {
            withSourcesJar()
        }
        if (generate_javadocs_jar.toBoolean()) {
            withJavadocJar()
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        sourceCompatibility = targetCompatibility = JavaVersion.VERSION_25
    }

    if (enable_junit_testing.toBoolean()) {
        dependencies {
            testImplementation 'org.junit.jupiter:junit-jupiter:6.0.3'
            testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        }
        tasks.named('test') {
            useJUnitPlatform()
            javaLauncher.set(javaToolchains.launcherFor {
                languageVersion = JavaLanguageVersion.of(25)
            })
            if (show_testing_output.toBoolean()) {
                testLogging {
                    showStandardStreams = true
                }
            }
        }
    }
}

// Root-only IDEA configuration; run targets live on :mod (PHASE_1_DOC §4.2.2, §12 item 10).
idea {
    project {
        settings {
            runConfigurations {
                '1. Build'(Gradle) {
                    taskNames = ["build"]
                }
                '2. Run Client'(Gradle) {
                    taskNames = [":mod:runClient"]
                }
                '3. Run Server'(Gradle) {
                    taskNames = [":mod:runServer"]
                }
            }
            compiler.javac {
                afterEvaluate {
                    javacAdditionalOptions = '-encoding utf8'
                    moduleJavacAdditionalOptions = subprojects.collectEntries { sub ->
                        [(sub.name + '.main'): sub.tasks.named('compileJava', JavaCompile).get()
                                .options.compilerArgs.collect { "\"${it}\"" }.join(' ')]
                    }
                }
            }
            taskTriggers {
                beforeSync tasks.getByPath(':mod:genSources')
            }
        }
    }
}
